...
            "state" : "translated",
            "value" : "拖出以分离标签页"
          }
        }
      }
    },
    "DuckDuckGo" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "DuckDuckGo"
...
            "state" : "translated",
            "value" : "打开的标签页、固定标签页和组不可用。"
          }
        }
      }
    },
    "Origami" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Origami"
          }
...
            "state" : "translated",
            "value" : "权限"
          }
        }
      }
    },
    "Pin Tab" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pin Tab"
...
            "state" : "translated",
            "value" : "设置类别"
          }
        }
      }
    },
    "Settings…" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings…"
...
            "state" : "translated",
            "value" : "取消标签页分组"
          }
        }
      }
    },
    "Unpin Tab" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Unpin Tab"
...
